Changes for 1.0beta12:

 - fixed UserParameter when it replaces existing one. Thanks to
 Sbastien "Slix" Linard. (Alexei) 
 - fixed PostgreSQL schema (Alexei)

Changes for 1.0beta11:

 - added support for user groups (Alexei)
 - added column actions.recipient (Alexei)
 - added support of system[proccount] under Solaris (Alexei) 
 - support for swap sizes >2Gb under Solaris. Thanks to Franky
 Van Liedekerke. (Alexei)
 - add actions when using templates. (Alexei)
 - fixed refresh of status of triggers. (Alexei) 
 - updated RedHat start-up scripts in misc/init.d/redhat. Thanks
 to Charlie. (Alexei)
 - fix for flexible SNMP port name (Alexei)
 - fixed permissions of PHP screens (Alexei)
 - period in graphs. Thanks to Igor Micko. (Alexei)
 - date in graphs (Alexei)
 - no refresh for charts.php if period is set (Alexei)
 - new navigation for charts.php. Thanks to Igor Micko. (Alexei)
 - fixed snmptrap.sh (Alexei)
 - IRC support channel #zabbix on irc.pilgerer.org (Alexei)
 - fix for dashed lines under some broken GD (Alexei)
 - http://zabbix.sf.net was changed to http://www.zabbix.org
 (Alexei)
 - support of delta flag in item definition (Alexei)
 - added column items.delta,prevorgvalue (Alexei)
 - support for operator '#', not equal. (Alexei)
 - support for functions date() and time() (Alexei)
 - fix of /proc/stat interpretation in diskdevice.c (Alexei)
 - support of system[uptime] for Solaris. Thanks to Franky Van
 Liedekerke. (Alexei)
 - fix for disk space calculation. Use statvfs' f_frsize instead
 of f_bsize. Thanks to Franky Van Liedekerke. (Alexei)
 - restrict host status change from Unreachable (Alexei)
 - fix for Solaris swap sizes (Alexei)
 - fix for counting of triggers in map.php.  (Alexei)
 - added translation of special HTML characters in history of
 alerts and alarms (Alexei)
 - fixed calculation of graph width under MS Explorer (Alexei)
 - fixed interpretation of parameter 'from' for graphs (Alexei)
 - removed references to screens_graphs (Alexei)